# terminalEngine

./: .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CmakeLists.txt  Makefile  TerminalEngine.sln  ZERO_CHECK.proj  ZERO_CHECK.proj.filters
Libraries/Rasterizer/: CMakeLists.txt  Makefile  Rasterizer.cpp
Libraries/Rasterizer/Headers/: Rasterizer.hpp
Libraries/Terminal/: CMakeLists.txt  Makefile  Terminal.cpp  Terminal.vcxproj  Terminal.vcxproj.filters
Libraries/Terminal/Debug/: Terminal.lib
Libraries/Terminal/Headers/: Terminal.hpp
Libraries/Terminal/Terminal.dir/Debug/Terminal.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  (+2 more)
Sources/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile  Project.sln  Project.vcxproj  Project.vcxproj.filters  TerminalEngine  TerminalEngine.vcxproj  TerminalEngine.vcxproj.filters  ZERO_CHECK.proj  ZERO_CHECK.proj.filters  main.cpp
Sources/TerminalEngine.dir/Debug/: TerminalEngine.exe.recipe  TerminalEngine.ilk
Sources/TerminalEngine.dir/Debug/TerminalEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  TerminalEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
